--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,15 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  
+  
   <body>
+ <%if logged_in?%>
+  <%= link_to 'Log Out', logout_path, method: "delete" %>
+  <%= link_to 'Home', root_path %>
+  <%else%>
+  <%= link_to 'Home', root_path %>
+  <%end%>
     <%= yield %>
   </body>
 </html>
