--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,17 @@
 
   
   
-  <body>
+  <body >
+  <%=render 'layouts/navbar' %>
+<br>
+ 
  <%if logged_in?%>
   <%= link_to 'Log Out', logout_path, method: "delete" %>
   <%= link_to 'Home', root_path %>
   <%else%>
   <%= link_to 'Home', root_path %>
   <%end%>
+  
     <%= yield %>
   </body>
 </html>
