--- a/app/assets/stylesheets/ custom.css.scss
+++ b/app/assets/stylesheets/ custom.css.scss
@@ -1,7 +1,59 @@
- 
+@import 'bootstrap/dist/css/bootstrap';
 
-h1 {
+.navbar {
 
-    color: red;
+    background-color: blue!important;
     
     }
+
+.nav-link {
+   color: white!important;
+}
+
+.navbar-brand {
+    color: white!important;
+}
+
+#logo {
+    float: left;
+    font-size: 1.2em;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    font-weight: bold;
+
+}
+
+#home-container {
+    margin-top: 20px;
+}
+
+.jumbotron {
+    background-image:asset-url('typing-on-laptop.jpg') ;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 425px;
+    text-decoration-color: black ;
+
+}
+
+.jumbotron-header {
+    text-align: center;
+    color: black;
+    
+}
+html,
+body {
+    height: 100%;
+    background-color: white ;
+    text-decoration-color: black;
+  }
+  
+  #page-content {
+    flex: 1 0 auto;
+  }
+  
+  #sticky-footer {
+    flex-shrink: none;
+  }
