--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Users</h1>
 
 <%@users.each do |user|%>
-<ul>
-<li><%= link_to user.username, user_path(user) %>
-</ul>
+<div class="card" style="width: 18rem;">
+  <ul class="list-group list-group-flush">
+    <li ><%= link_to user.username, user_path(user), class:"list-group-item" %></li>
+  </ul>
+</div>
 <%end%>
