--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,10 +1,4 @@
-<% if @blog.errors.any? %>
-<ul>
-  <% @blog.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-  <% end %>
-</ul>
-<% end %>
+<%=render 'shared/errors', obj: @blog%>
 
 <%=form_for @blog do |f|%>
 <%=f.label :title%>
