--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,19 @@
-<h1>Users</h1>
+<h1 class="text-center mt-4">Users</h1>
 
 <%@users.each do |user|%>
-<div class="card" style="width: 18rem;">
-  <ul class="list-group list-group-flush">
-    <li ><%= link_to user.username, user_path(user), class:"list-group-item" %></li>
-  </ul>
+<div class='container'>
+    <div class='row justify-content-md-center'>
+        <div class="col-8 mt-4">
+            <div class="card text-center">
+            <div class="card-header">
+                <%= link_to user.username, user %> 
+            </div>
+            <div class="card-body">
+                <p class="card-text"><%=pluralize(user.blogs.length, "blog")%>  </p>
+                <%= link_to 'View Profile', user, class:"btn btn-primary" %>
+            </div>
+            </div>
+        </div>
+    </div>
 </div>
 <%end%>
