--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,6 +22,7 @@
 </div>
 <%end%>
 
-
+<%if @user == current_user%>
 <%= link_to 'New Blog', new_blog_path %>
 <%= link_to 'See All Users', users_path %>
+<%end%>
