--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,8 +9,11 @@
                 <%= link_to user.username, user %> 
             </div>
             <div class="card-body">
-                <p class="card-text"><%=pluralize(user.blogs.length, "blog")%>  </p>
+                <p class="card-text"><%=pluralize(user.blogs.length, "blog")%> </p>
                 <%= link_to 'View Profile', user, class:"btn btn-primary" %>
+            </div>
+            <div class="card-footer text-muted">
+                Joined <%= user.created_at.strftime("%m-%d-%Y")%>
             </div>
             </div>
         </div>
