--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
 <h1 class="text-center mt-4"><%=@user.username%></h1>
+<%if @user == current_user%>
+<div class='container text-center mt-4'>
+<%= link_to 'Edit Profile', edit_user_path(@user), class:"btn btn-primary" %>
+</div>
+<%end%>
 
 <%@user.blogs.each do |blog|%>
 <div class='container'>
@@ -21,8 +26,10 @@
     </div>
 </div>
 <%end%>
-
+<div class='container text-center mt-4'>
 <%if @user == current_user%>
-<%= link_to 'New Blog', new_blog_path %>
-<%= link_to 'See All Users', users_path %>
+<%= link_to 'New Blog', new_blog_path, class:"btn btn-primary"  %>
+
 <%end%>
+<%= link_to 'See All Users', users_path, class:"btn btn-primary" %>
+</div>
