--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,16 @@
     <li class="nav-item">
        <%= link_to 'Explore Users', users_path, class: 'nav-link' %> 
     </li>
+    <li class="nav-item">
+       <%= link_to 'Explore Blogs', blogs_path, class: 'nav-link' %> 
+    </li>
       <%else%>
+      <li class="nav-item">
+       <%= link_to 'Explore Users', users_path, class: 'nav-link' %> 
+    </li>
+    <li class="nav-item">
+       <%= link_to 'Explore Blogs', blogs_path, class: 'nav-link' %> 
+    </li>
 
       
       <%end%>
