--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,6 +29,7 @@
 <div class='container text-center mt-4'>
 <%if @user == current_user%>
 <%= link_to 'New Blog', new_blog_path, class:"btn btn-primary"  %>
+<%= link_to 'Delete Profile', @user, method: "delete", data: {confirm:"are you sure?"} %>
 
 <%end%>
 <%= link_to 'See All Users', users_path, class:"btn btn-primary" %>
