--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -11,7 +11,7 @@
         <div class="col-8 mt-4">
             <div class="card text-center">
             <div class="card-header">
-                By <%= blog.user.username%>
+                By <%= link_to blog.user.username, user_path(blog.user) %>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><%=blog.title%></h5>
