--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,7 +4,7 @@
   
   <h3><%= @blog.content%></h3>
 
-<%if @blog.user_id == current_user.id%>
+<%if logged_in? && (@blog.user_id == current_user.id || current_user.admin?)%>
   <%= link_to 'Edit Blog', edit_blog_path(@blog) %>
   <%= link_to 'Delete', blog_path(@blog), method:'delete', data: {confirm: "Are you sure you want to delete this?"}%>
 <%end%>
