--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-4"><%=@user.username%></h1>
+<h1 class="text-center mt-4"> <%= "(Admin)" if @user.admin? %> Profile <%=@user.username%></h1>
 <%if @user == current_user%>
 <div class='container text-center mt-4'>
 <%= link_to 'Edit Profile', edit_user_path(@user), class:"btn btn-primary" %>
@@ -27,7 +27,7 @@
 </div>
 <%end%>
 <div class='container text-center mt-4'>
-<%if @user == current_user%>
+<%if logged_in? && (@blog.user_id == current_user.id || current_user.admin?)%>
 <%= link_to 'New Blog', new_blog_path, class:"btn btn-primary"  %>
 
 <%= link_to 'Delete Profile', @user, method: "delete", data: {confirm:"are you sure?"}, class:"btn btn-primary" %>
